# AI-hisho

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: main.py
backend/api/routes/: calendar.py  chat.py  logs.py  memories.py  memos.py  reminders.py  search.py  tasks.py  voice.py
backend/api/schemas/: common.py
backend/config/: loader.py
backend/core/: logging.py  persona.py
backend/core/context/: engine.py
backend/core/intent/: classifier.py  rules.py
backend/core/memory/: engine.py  pruner.py  scorer.py  summarizer.py
backend/core/workflow/: engine.py
backend/core/workflow/adapters/: base.py  calendar.py
backend/core/workflow/internal/: memos.py  notifications.py  reminders.py  tasks.py
backend/db/: models.py  session.py
backend/llm/: client.py  router.py
backend/llm/providers/: base.py  mock.py  ollama.py  openai.py
backend/rag/: engine.py  indexer.py  retriever.py
backend/scheduler/: jobs.py
backend/stt_tts/: audio.py  stt.py  tts.py  wakeword.py
config/: persona.yaml  settings.yaml
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: App.tsx  ConfirmModal.tsx  Sidebar.tsx  icons.tsx
frontend/src/components/briefing/: BriefingScreen.tsx
frontend/src/components/chat/: ChatScreen.tsx
frontend/src/components/logs/: LogsScreen.tsx
frontend/src/components/notes/: NotesScreen.tsx
frontend/src/components/reminders/: RemindersScreen.tsx
frontend/src/components/settings/: SettingsScreen.tsx
frontend/src/components/tasks/: TasksScreen.tsx
frontend/src/hooks/: useConfirm.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
personal-assistant-workflow-system/: README.md
personal-assistant-workflow-system/project/: Personal Assistant.html  app.jsx  briefing.jsx  confirm-modal.jsx  logs.jsx  notes.jsx  reminders.jsx  settings.jsx  styles.css  tasks.jsx
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_intent.py  test_intent_phase2.py  test_llm_mock.py  test_logs_api.py  test_memory_pruner.py  test_memory_scorer.py  test_rag_engine.py  test_reminders.py  test_router.py  test_search_api.py  test_stt_tts.py  test_tasks.py
