[project]
name = "personal-assistant"
version = "0.1.0"
description = "単一ユーザ向けの呼び出し型AI秘書システム"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
rag = [
    "qdrant-client[fastembed]>=1.9",
]
calendar = [
    "google-api-python-client>=2.100",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.0",
]
# Phase 4 — 音声入出力
stt = [
    "faster-whisper>=1.0",
]
voice = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.24",
]
wakeword = [
    "openwakeword>=0.6",
    "sounddevice>=0.4",
    "numpy>=1.24",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx",
    "respx>=0.21",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["backend*", "tests*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
